# sdd_universal

./: .gitignore  Cargo.toml  check_results.py  mc_case_run1_theta_0.12_beta_0.5_tau0_10_every_second_false_constant-theta_true_CC.csv  mc_case_run1_theta_0.12_beta_0.5_tau0_10_every_second_false_constant-theta_true_XC.csv  narma_case_run1_theta_0.12_beta_0.5_tau0_10_every_second_true_constant-theta_false.csv  nodes_log.csv  nohup.out  run_scheduler.py  santa_case_run1_theta_0.34_beta_0.5_tau0_28.333333333333336_every_second_false_constant-theta_false.csv
py-scripts/: build_filename.py  check_results.py  list_commands.py  params.py  plot_nodes.py  run_scheduler.py  total_len.py
results/: mc_case_MC-2D_theta_0.0005_beta_0.2311_tau0_0.04166666666666667_every_second_false_constant-theta_false_CC.csv  mc_case_MC-2D_theta_0.0005_beta_0.2311_tau0_0.04166666666666667_every_second_false_constant-theta_false_LC.csv  mc_case_MC-2D_theta_0.0005_beta_0.2311_tau0_0.04166666666666667_every_second_false_constant-theta_false_QC.csv  mc_case_MC-2D_theta_0.0005_beta_0.2311_tau0_0.04166666666666667_every_second_false_constant-theta_false_XC.csv  mc_case_MC-2D_theta_0.0005_beta_0.4522_tau0_0.04166666666666667_every_second_false_constant-theta_false_CC.csv  mc_case_MC-2D_theta_0.0005_beta_0.4522_tau0_0.04166666666666667_every_second_false_constant-theta_false_LC.csv  mc_case_MC-2D_theta_0.0005_beta_0.4522_tau0_0.04166666666666667_every_second_false_constant-theta_false_QC.csv  mc_case_MC-2D_theta_0.0005_beta_0.4522_tau0_0.04166666666666667_every_second_false_constant-theta_false_XC.csv  (+1067 more)
(+16 files in other folders)
