[package]
name = "v27_sdd_universal"
version = "0.1.0"
edition = "2024"

[dependencies]
stopwatch = "0.0.7"
csv = "1.3.1"
rand = "0.9.1"
sysinfo = "0.35.1"
nalgebra = "0.33.2"
stat = "0.2.0"
rand_distr = "0.5.1"
flate2 = "1.1.4"
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
blosc = "0.2.1"
statrs = "0.18.0"
clap = { version = "4.0", features = ["derive"] }